--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,13 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls
 
+script:
+  - flake8 ./
+
 after_success:
   coveralls
+
+notifications:
+  email:
+    on_success: change
+    on_failure: always
